deploy/base/service-dataplane.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-production-dataplane
  namespace: haproxy-template-ic
  labels:
    app: haproxy
    component: loadbalancer
spec:
  type: ClusterIP
  selector:
    app: haproxy
    component: loadbalancer
  ports:
    - name: dataplane-api
      port: 5555
      targetPort: 5555
      protocol: TCP
