deploy/base/service-haproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-production
  namespace: haproxy-template-ic
  labels:
    app: haproxy
    component: loadbalancer
spec:
  type: ClusterIP
  selector:
    app: haproxy
    component: loadbalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: health
      port: 8404
      targetPort: 8404
      protocol: TCP
