deploy/base/service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-template-ic-metrics
  namespace: haproxy-template-ic
  labels:
    app: haproxy-template-ic
    app.kubernetes.io/component: metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app: haproxy-template-ic
