deploy/base/service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-template-ic-webhook
  namespace: haproxy-template-ic
  labels:
    app.kubernetes.io/name: haproxy-template-ic
    app.kubernetes.io/component: webhook
spec:
  type: ClusterIP
  ports:
  - port: 8443
    targetPort: webhook
    protocol: TCP
    name: webhook
  selector:
    app.kubernetes.io/name: haproxy-template-ic
    app.kubernetes.io/instance: haproxy-template-ic
