deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-template-ic
  namespace: haproxy-template-ic
spec:
  selector:
    app: haproxy-template-ic
  ports:
    - name: http
      port: 8080
      targetPort: healthz
